--- a/run-away/assets/shell/layout.css
+++ b/run-away/assets/shell/layout.css
@@ -1,4 +1,4 @@
-/* GENERALS */
+/* GENERAL */
 
 ::-webkit-input-placeholder {
   color:#7C6F6A;
@@ -115,11 +115,14 @@ input[type="submit"],
   border-color:transparent;
   border-bottom-color:rgba(0,0,0,.25);
   color:white;
-  background-image:-webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
-  background-image:-moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
-  background-image:-ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
-  background-image:-o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
-  background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.05));
+  background-image:-webkit-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.1));
+  background-image:-moz-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.1));
+  background-image:-ms-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.1));
+  background-image:-o-linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.1));
+  background-image:linear-gradient(rgba(0,0,0,0),rgba(0,0,0,.1));
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
   -webkit-box-shadow:0 1px 1px rgba(0,0,0,.4);
   -moz-box-shadow:0 1px 1px rgba(0,0,0,.4);
   box-shadow:0 1px 1px rgba(0,0,0,.4);
@@ -188,7 +191,11 @@ input[type="submit"]:active,
 .table-bordered td,
 table[border="1"] th,
 table[border="1"] td,
-hr {border-color:#DBCEC9}
+hr,
+fieldset {border-color:#DBCEC9}
+
+.table-bordered th,
+table[border="1"] th {background-color:#FAF5F2}
 
 .form-label,
 .form-static {border-top:1px solid transparent}
@@ -348,9 +355,8 @@ hr {border-color:#DBCEC9}
 .blog-navigation .blog-navigation-toggle.active span {color:#F2E336}
 
 
-/* POSTS */
+/* POST */
 
-.post-body {margin-top:1.3846153846153846em}
 .post-footer {margin:5% 0}
 
 .post-index {margin:0 0 5%}
@@ -372,11 +378,11 @@ hr {border-color:#DBCEC9}
 .blog-pager-next {float:right}
 
 
-/* COMMENTS */
+/* COMMENT */
 
 .comments {margin:5% 0 0}
 
-.comment-list {
+.comments-body {
   list-style:none;
   margin:0;
   padding:0;
@@ -438,17 +444,22 @@ hr {border-color:#DBCEC9}
 
 .comment-name {
   display:block;
+  margin:0;
+  padding:0;
   float:left;
+  font:inherit;
   font-weight:bold;
 }
 
 .comment-time {
   display:block;
+  margin:0;
+  padding:0;
   float:right;
-  color:#AAA;
+  color:#AC9A93;
 }
 
-.comment-form {margin:5% 0 0}
+.comment-form {margin:5% 0 0 0}
 .comment-form input[name="math"] {width:4em}
 
 
@@ -474,7 +485,7 @@ hr {border-color:#DBCEC9}
 .column-bottom {margin-top:5%}
 
 
-/* WIDGETS */
+/* WIDGET */
 
 .widget-content {margin:1.3846153846153846em 0}
 .widget-search input {width:160px}
@@ -494,7 +505,7 @@ hr {border-color:#DBCEC9}
 .text-reject {color:#6A2E2E}
 
 
-/* MESSAGES */
+/* MESSAGE */
 
 .message {
   background-color:#EEE;
